# lolbas-sysmon-rule-generator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README-ru.md  README.md  config.toml  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml
ART-LOLBIN-Tests/: AtomicRedTeam_LOLBIN_TESTS.ps1  README.md  _additional.py  main.py
ART-LOLBIN-Tests/configs/: config_example.json.results  config_generated.json.results  final_config.json.results
ART-LOLBIN-Tests/test_results/: enriched.json.results  sysmon-modular.json.results
ART-LOLBIN-Tests/test_runner/: config_loader.py  models.py  orchestrator.py  process_runner.py  sysmon_client.py
lolbas_sysmon/: __main__.py  cli.py
lolbas_sysmon/config/: __init__.py  logger.py  settings.py
lolbas_sysmon/models/: __init__.py  lolbin.py
lolbas_sysmon/services/: __init__.py  config_manager.py  lolbas_client.py  lolbas_parser.py  mitre_client.py  rule_generator.py  sigma_client.py  sigma_converter.py
lolbas_sysmon/utils/: __init__.py  cache.py
tests/integration/: test_cli.py  test_pipeline.py
tests/unit/: test_cache.py  test_config.py  test_lolbas_client.py  test_lolbas_parser.py  test_mitre_client.py  test_models.py  test_rule_generator.py  test_sigma_client.py  test_sigma_converter.py  test_sigma_rule_generator.py
